# holochain-prefix-index

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  flake.nix  package-lock.json  package.json
.github/workflows/: test.yaml
dnas/demo/workdir/: dna.yaml
dnas/demo/zomes/coordinator/demo/: Cargo.toml
dnas/demo/zomes/coordinator/demo/src/: demo_prefix_index.rs  lib.rs
dnas/demo/zomes/coordinator/demo/tests/: prefix_index_tests.rs
dnas/demo/zomes/integrity/demo/: Cargo.toml
dnas/demo/zomes/integrity/demo/src/: lib.rs
lib/hc_prefix_index/: Cargo.toml
lib/hc_prefix_index/src/: prefix_index.rs  utils.rs  validate.rs
lib/prefix_index/: Cargo.toml
lib/prefix_index/src/: lib.rs  prefix_index.rs  prefix_index_to_hashes.rs  utils.rs  validate.rs
tests/: .gitignore  package.json
tests/src/demo/demo/: prefix-index.test.ts
workdir/: happ.yaml  web-happ.yaml
