[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*", "lib/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.5.1"
hdk = "0.4.1"
serde = "1"
holochain = { version = "0.4.1", default-features = false, features = [
  "test_utils",
  "wasmer_sys"
] }
tokio = { version = "1.27", features = ["full"] }

[workspace.dependencies.demo]
path = "dnas/demo/zomes/coordinator/demo"

[workspace.dependencies.demo_integrity]
path = "dnas/demo/zomes/integrity/demo"

[workspace.dependencies.hc_prefix_index]
path = "lib/hc_prefix_index"
