[package]
name = "hc_prefix_index"
version = "0.13.0"
edition = "2021"
description = "Prefix indexing of strings for use by type-ahead interfaces in holochain apps"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_prefix_index"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
rand = "0.8.5"
