[package]
name = "demo"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "demo"

[dependencies]
hdk = { workspace = true }
holochain_integrity_types = { workspace = true }

serde = { workspace = true }

demo_integrity = { workspace = true } 
prefix_index = { workspace = true }