[package]
name = "demo"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "demo"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
demo_integrity = { workspace = true }
hc_prefix_index = { workspace = true }

[dev-dependencies]
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true }
tokio = { workspace = true }
